--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     />
 
     <!-- Main css -->
-    <link rel="stylesheet" href="/index.css" />
+    <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
     <header class="header">
