--- a/index.html
+++ b/index.html
@@ -25,10 +25,12 @@
       </h1>
     </header>
     <section class="info">
-      <div class="wrap-text">
+      <div class="wrap-text-up">
         <p>不動産売買仲介のホームページは閉鎖させていただきました。</p>
 
-        <p>大変ご迷惑をおかけいたしますが、何卒ご理解の程、お願い申し上げます。</p>
+        <p>
+          大変ご迷惑をおかけいたしますが、何卒ご理解の程、お願い申し上げます。
+        </p>
 
         <p>
           <span class="text-highlight"
@@ -43,7 +45,7 @@
         </p>
       </div>
 
-      <div class="text-">
+      <div class="wrap-text-down">
         <p>
           なお、<span class="text-highlight"
             >賃貸リノベーション情報サイト「モトスミ グッドリノベーション」</span
@@ -59,7 +61,9 @@
       <img src="img/banner.PNG" alt="banner" />
       <div class="banner-desc">
         <p>
-          <span class="desc-text">※30秒後に自動でこちらのサイトに移動しますが、</span>万が一切り替わらない場合は以下をクリックし、お進みくだ
+          ※30秒後に自動でこちらのサイトに移動しますが、
+          <br class="break-text" />
+          万が一切り替わらない場合は以下をクリックし、お進みくだ
         </p>
         <a href="https://example.com" target="blank">https://example.com</a>
       </div>
