--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         ご利用いただき、誠にありがとうございます
       </h1>
     </header>
+
     <section class="info">
       <div class="wrap-text-up">
         <p>不動産売買仲介のホームページは閉鎖させていただきました。</p>
@@ -57,6 +58,7 @@
         </p>
       </div>
     </section>
+
     <section class="banner">
       <img src="img/banner.PNG" alt="banner" />
       <div class="banner-desc">
@@ -94,5 +96,12 @@
         </div>
       </div>
     </footer>
+
+    <!-- Change page after 30s -->
+    <script>
+      setTimeout(() => {
+        window.location.replace("https://example.com");
+      }, 30000)
+      </script>
   </body>
 </html>
